--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -3,9 +3,10 @@
 
 body {
   min-width: 800px;
+  background: transparent;
 }
 
-.wrapper {
+[class*="view-"] .wrapper {
   .inner-wrapper {
     max-width: 100%;
   }
@@ -114,7 +115,6 @@ body {
           background-color: $primary;
           color: $white;
           border-color: $transparent;
-        color: $white;
       }
 
         &:focus {
@@ -417,6 +417,10 @@ body {
       }
     }
   }
+
+  .studio-xblock-wrapper::marker {
+    content: '';
+  }
 }
 
 .view-container .content-primary {
@@ -537,19 +541,40 @@ body {
   }
 }
 
-[class*="view-"] .modal-lg.modal-editor .modal-header .editor-modes .action-item {
-  .editor-button,
-  .settings-button {
-    @extend %light-button;
+body [class*="view-"] .openassessment_editor_buttons.xblock-actions {
+  padding: 15px 2% 3px 2%;
+}
+
+[class*="view-"] {
+  .modal-lg {
+    max-width: 1200px;
+  }
+
+  .modal-lg.modal-editor .modal-header .editor-modes .action-item {
+    .editor-button,
+    .settings-button {
+      @extend %light-button;
+    }
+  }
+
+  .wrapper.wrapper-modal-window .modal-window .modal-actions .action-primary {
+    @extend %primary-button;
+  }
+
+  #openassessment-editor {
+    #oa_basic_settings_editor #openassessment_title_editor_wrapper input, input[type=number] {
+      width: 48%;
+    }
   }
 }
 
-[class*="view-"] .wrapper.wrapper-modal-window .modal-window .modal-actions .action-primary {
-  @extend %primary-button;
-}
-
-div.wrapper-comp-settings {
+[class*="view-"] div.wrapper-comp-settings {
   .list-input.settings-list {
+    input:not([type="file"]):not([type="number"]),
+    select {
+      width: 48%;
+    }
+
     .metadata-list-enum .create-setting {
       @extend %modal-actions-button;
 
@@ -573,6 +598,7 @@ div.wrapper-comp-settings {
   .list-input.settings-list {
     .field.comp-setting-entry.is-set .setting-input {
       color: $text-color;
+      margin-bottom: 5px;
     }
 
     select {
@@ -759,4 +785,43 @@ select {
 
 .wrapper-xblock .xblock-header-primary .header-actions .wrapper-nav-sub {
   z-index: $zindex-dropdown;
+}
+
+.xblock-studio_view-drag-and-drop-v2 .xblock--drag-and-drop--editor {
+  .zone-align-select,
+  .item-styles-form input,
+  .drag-builder textarea,
+  .drag-builder textarea,
+  .drag-builder textarea,
+  .drag-builder textarea,
+  .target-image-form textarea  {
+    width: 100%;
+  }
+
+  .target-image-form input[type="text"] {
+    width: 100%;
+
+    &.background-url {
+      margin-bottom: 10px;
+    }
+
+    &.autozone-layout {
+      &.autozone-layout-cols,
+      &.autozone-layout-rows {
+        width: auto;
+      }
+    }
+
+    &.autozone-size {
+      &.autozone-size-width,
+      &.autozone-size-height {
+        width: auto;
+      }
+    }
+  }
+
+  .feedback-tab input:not([type=checkbox]),
+  .xblock--drag-and-drop--editor .feedback-tab select {
+    width: 100%;
+  }
 }
