--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -117,7 +117,7 @@ html {
           background-color: $primary;
           color: $white;
           border-color: $transparent;
-      }
+        }
 
         &:focus {
           outline: 2px $transparent;
@@ -125,6 +125,11 @@ html {
           box-shadow: inset 0 0 0 2px $primary;
           color: $primary;
           border-color: $transparent;
+        }
+
+        &.manage-tags-button {
+          width: 100%;
+          border-radius: 0;
         }
       }
     }
