--- a/lms/templates/vert_module.html
+++ b/lms/templates/vert_module.html
@@ -15,15 +15,17 @@ from openedx.core.djangolib.markup import HTML
 % if has_assignments and due:
   % if subsection_format:
     <%
-    data_string = _("{subsection_format} due {{date}}").format(subsection_format=subsection_format)
+    data_string = _("{subsection_format} due {date}").format(subsection_format=subsection_format, date=due)
     %>
   % else:
     <%
-    data_string = _("Due {date}")
+    data_string = _("Due {date}").format(date=due)
     %>
   % endif
   <div class="vert-due-date">
-    <div class="localized-datetime" data-datetime="${due}" data-string="${data_string}" data-timezone="${user_timezone}"></div>
+    <div class="localized-datetime-2" data-datetime="${due}" data-string="${data_string}" data-timezone="${user_timezone}">
+      ${due} UTC
+    </div>
     % if completed:
       <div class="pill completed">${_('Completed')}</div>
     % elif past_due:
